--- a/www/app/templates/app/page.html
+++ b/www/app/templates/app/page.html
@@ -1,4 +1,4 @@
-﻿{% extends "app/layout.html" %}
+{% extends "app/layout.html" %}
 {% load sections sekizai_tags %}
 {% block content %}
     {{ ''|reset_uniq }}
