--- a/www/app/templates/app/table.html
+++ b/www/app/templates/app/table.html
@@ -1,4 +1,4 @@
-﻿{% load static sections sekizai_tags %}
+{% load static sections sekizai_tags %}
 {% addtoblock "css" %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/table.css' %}" />
 {% endaddtoblock %}
