--- a/www/app/templates/app/map.html
+++ b/www/app/templates/app/map.html
@@ -1,16 +1,18 @@
 {% load static sections sekizai_tags %}
-{% addtoblock "css" %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/map.css' %}" />
-{% endaddtoblock %}
-{% block section %}
-    <section class="section section-map">
-        {% if section.title %}
-            <h2 class="title {% if section.title_animate %}before {{ section.title_animate }}{% endif %}">{{ section.title }}</h2>
-        {% endif %}
-        <div class="route forward">Выберите конечный пункт!</div>
-        <div class="route reverse">Выберите начальный пункт!</div>
-        <div class="map" id="{{'map'|uniq|stat_uniq}}"></div>
-        {% addtoblock "js_ready" %}
+
+{% if map %}
+    {% addtoblock "css" %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/map.css' %}" />
+    {% endaddtoblock %}
+    {% block section %}
+        <section class="section section-map">
+            {% if section.title %}
+                <h2 class="title {% if section.title_animate %}before {{ section.title_animate }}{% endif %}">{{ section.title }}</h2>
+            {% endif %}
+            <div class="route forward">Выберите конечный пункт!</div>
+            <div class="route reverse">Выберите начальный пункт!</div>
+            <div class="map" id="{{'map'|uniq|stat_uniq}}"></div>
+            {% addtoblock "js_ready" %}
 <script src="{% static 'js/map.js' %}"></script>
 <script>
 if (typeof maps === 'undefined' || maps === null) {
@@ -28,10 +30,11 @@ maps.{{''|stat_uniq}}  =
     },
 {% endfor %}}
 </script>
-        {% endaddtoblock %}
-        {% addtoblock "js_head" %}
+            {% endaddtoblock %}
+            {% addtoblock "js_head" %}
 <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 <script src="{% static 'js/map-round.js' %}"></script>
-        {% endaddtoblock %}
-    </section>
-{% endblock %}
+            {% endaddtoblock %}
+        </section>
+    {% endblock %}
+{% endif %}
