--- a/www/app/templates/app/layout.html
+++ b/www/app/templates/app/layout.html
@@ -1,4 +1,4 @@
-﻿{% load staticfiles form bootstrap4 static sekizai_tags %}
+{% load staticfiles form bootstrap4 static sekizai_tags %}
 <!DOCTYPE html>
 <html lang="ru-RU">
 <head>
