--- a/www/app/templates/app/layout.html
+++ b/www/app/templates/app/layout.html
@@ -1,4 +1,4 @@
-{% load staticfiles form bootstrap4 static sekizai_tags %}
+﻿{% load staticfiles form bootstrap4 static sekizai_tags %}
 <!DOCTYPE html>
 <html lang="ru-RU">
 <head>
@@ -43,8 +43,8 @@
                     {% block form %}{% render_form %}{% endblock %}
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button form="form" type="submit" class="btn btn-primary">Save changes</button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+                        <button form="form" type="submit" class="btn btn-primary">Отправить заявку</button>
                     </div>
                 </div>
             </div>
