--- a/www/app/templates/app/layout.html
+++ b/www/app/templates/app/layout.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{ title }}Iteh.by</title>
+    <title>{{ title }}ChipFix.by</title>
     {% render_block "css" %}
     {% addtoblock "css" %}
         {% bootstrap_css %}
@@ -53,7 +53,7 @@
     </div>
         <hr/>
         <footer>
-            <p>&copy; {{ year }} - Iteh.by</p>
+            <p>&copy; {{ year }} - ChiFix.by</p>
         </footer>
     {% render_block "js_ready" %}
 </body>
