--- a/www/app/templates/app/menu.html
+++ b/www/app/templates/app/menu.html
@@ -3,7 +3,7 @@
         <button class="navbar-toggler" aria-expanded="false" aria-controls="navbarsExampleDefault" aria-label="Toggle navigation" type="button" data-target="#navbarsExampleDefault" data-toggle="collapse">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="/">Iteh.by</a>
+        <a class="navbar-brand" href="/">ChipFix.by</a>
         <div class="collapse navbar-collapse justify-content-end" id="navbarsExampleDefault">
             <ul class="nav navbar-nav">
                 {% for page in pages %}
