--- a/www/static/css/table.css
+++ b/www/static/css/table.css
@@ -17,7 +17,10 @@ th[scope="row"] {
     background-color: #0087ff;
 }
 .caption{
+    display: table-caption;
+    caption-side: top;
     font-weight: bold;
+    text-align: center;
 }
 .reverse {
     flex-direction: row-reverse;
