--- a/www/app/templates/app/page.html
+++ b/www/app/templates/app/page.html
@@ -2,7 +2,7 @@
 {% load sections sekizai_tags %}
 {% block content %}
     {{ ''|reset_uniq }}
-    {% if page.homePage %}
+    {% if page and page.homePage %}
         <div id="main-top" class="section">
             <div id="main-logo" class="main-sub"></div>
             <div id="main-info" class="main-sub">
